add an index of reports and some documentation
